# Finite-Automata---Math-CS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
automata/: 1.txt  16.txt  17.txt  18.txt  20.txt  24.txt  27.txt  33.txt  40.txt  41.txt  44.txt  6.txt  test.txt  test2.txt  test3.txt  test5.txt  test6.txt  testMin.txt  testRead.txt
automata/test/: test5.txt
src/: FA.cpp  FA.h  Reading.cpp  Reading.h  Standardization.cpp  State.cpp  State.h  Transition.cpp  Transition.h  complementary.cpp  completion.cpp  completion.h  determinization.cpp  determinization.h  files.cpp  files.h  mainLoop.cpp  mainLoop.h  minimization.cpp  minimization.h  reading.cpp  standardization.cpp  structure.cpp  structure.h
